--- a/style.css
+++ b/style.css
@@ -43,4 +43,8 @@ body {
   background: black;
   position: absolute;
   top: 50%;
+  transform-origin: 100%; /* puts pivot point at right of hand */
+  transform: rotate(90deg);
+  transition: all 0.5s;
+  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
